# Thesis_ARGoS

./: .gitignore  DWBPF.py  amanatides_woo_visualizer.py  battery_and_travelet_path_plotter_averageperconfig.py  cell_count_visualizer.py  cell_count_visualizer_averageperconfig.py  certainty_plotter.py  certainty_plotter2.py  collisions_averageperconfig.py  completed_experiments.csv  completed_experiments.py  completed_experiments_house.csv  completed_experiments_house_tilted.csv  completed_experiments_museum.csv  completed_experiments_museum_tilted.csv  completed_experiments_office.csv  completed_experiments_office_tilted.csv  completed_experiments_pc12-03_house.csv  completed_experiments_pc12-03_house_tilted.csv  completed_experiments_pc12-03_museum.csv  completed_experiments_pc12-03_museum_tilted.csv  completed_experiments_pc12-03_office.csv  completed_experiments_pc12-03_office_tilted.csv  completed_experiments_pc_house.csv  completed_experiments_pc_house_tilted.csv  completed_experiments_pc_museum.csv  completed_experiments_pc_museum_tilted.csv  completed_experiments_pc_office.csv  completed_experiments_pc_office_tilted.csv  completed_experimentss_from_zip.py  configgenerator.py  converter.py  coordinates_output.py  coverage_and_certainty_plotter_averageperconfig.py  coverage_plotter.py  coverage_plotter2.py  coverage_plotter_averageperconfig.py  delete_zero_pheromones_matrices_csv.py  deleteframes.py  direction_heatmap.py  (+28 more)
argos3-examples/loop_functions/agent_vision_loop_functions_pipuck/: CMakeLists.txt  agent_vision_loop_functions_pipuck.cpp  agent_vision_loop_functions_pipuck.h  agent_vision_qtuser_functions_pipuck.cpp  agent_vision_qtuser_functions_pipuck.h
argos3-examples/loop_functions/coverage_loop_functions_pipuck/: CMakeLists.txt  coverage_loop_functions_pipuck.cpp  coverage_loop_functions_pipuck.h
argos3-examples/loop_functions/position_loop_functions/: CMakeLists.txt  position_loop_functions.cpp  position_loop_functions.h
argos3-examples/loop_functions/position_loop_functions_lua/: CMakeLists.txt  position_loop_functions_lua.cpp
argos3-examples/loop_functions/trajectory_loop_functions_pipuck/: CMakeLists.txt  trajectory_qtuser_functions_pipuck.cpp  trajectory_qtuser_functions_pipuck.h
implementation_and_examples/agent_implementation/: Box.h  CMakeLists.txt  NN.cpp  NN.h  PheromoneMatrix.cpp  PheromoneMatrix.h  Quadtree.h  agent.cpp  agent.h  config.yaml  coordinate.cpp  coordinate.h  feature_config.h  main.cpp  parameters.h  radio.cpp  radio.h
implementation_and_examples/agent_implementation/agent_control/battery/: BatteryManager.cpp  BatteryManager.h  MicroControllerBatterManager.cpp  MicroControllerBatteryManager.cpp  MicroControllerBatteryManager.h  MotionSystemBatteryManager.cpp  MotionSystemBatteryManager.h
implementation_and_examples/agent_implementation/agent_control/communication/: TimeSynchronizer.cpp  TimeSynchronizer.h
implementation_and_examples/agent_implementation/agent_control/path_planning/: ForceVectorCalculator.cpp  ForceVectorCalculator.h  ForceVectorCalculatorMatrix.cpp  ForceVectorCalculatorMatrix.h  ForceVectorCalculatorQuadtree.cpp  ForceVectorCalculatorQuadtree.h  FrontierEvaluator.cpp  FrontierEvaluator.h  PathFollower.cpp  PathFollower.h  RandomWalk.cpp  RandomWalk.h  SimplePathPlanner.cpp  SimplePathPlanner.h  WallFollower.cpp  WallFollower.h
implementation_and_examples/agent_implementation/configs/: config.yaml  config2.yaml  config__alignment0_1__cohesion__0_1.yaml  config__alignment0_3__cohesion__0.yaml  config__alignment0_3__cohesion__0_1.yaml  config__alignment0__cohesion__0.yaml  config__alignment0__cohesion__0_1.yaml  config_bigger_safety_range.yaml  config_bigger_safety_range_smaller_n.yaml  placeholder_config.yaml  placeholder_config_cohesion_alignment.yaml
implementation_and_examples/agent_implementation/configs/fsr/: BASEQT_AAVFIX_end_time_1000_noise_1_wifi_range_99999_message_loss_probability_0_frontier_search_radius_5_evaporation_time_100.yaml  BASEQT_AAVFIX_end_time_400_noise_0_wifi_range_99999_message_loss_probability_0_frontier_search_radius_15_evaporation_time_100.yaml  BASEQT_AAVFIX_end_time_400_noise_1_wifi_range_99999_message_loss_probability_0_frontier_search_radius_5_evaporation_time_100.yaml  BASEQT_AAVFIX_end_time_600_noise_0_wifi_range_99999_message_loss_probability_0_frontier_search_radius_5_evaporation_time_100.yaml  BASEQT_AAVFIX_end_time_600_noise_1_wifi_range_99999_message_loss_probability_0_frontier_search_radius_99999_evaporation_time_100.yaml  BASE_AAVFIX_end_time_1000_noise_0_wifi_range_99999_message_loss_probability_0_frontier_search_radius_15_evaporation_time_100.yaml  BASE_AAVFIX_end_time_1000_noise_1_wifi_range_99999_message_loss_probability_0_frontier_search_radius_99999_evaporation_time_100.yaml  BASE_AAVFIX_end_time_400_noise_0_wifi_range_99999_message_loss_probability_0_frontier_search_radius_5_evaporation_time_100.yaml  BASE_AAVFIX_end_time_400_noise_0_wifi_range_99999_message_loss_probability_0_frontier_search_radius_99999_evaporation_time_100.yaml  BASE_AAVFIX_end_time_600_noise_0_wifi_range_99999_message_loss_probability_0_frontier_search_radius_15_evaporation_time_100.yaml  BASE_AAVFIX_end_time_600_noise_0_wifi_range_99999_message_loss_probability_0_frontier_search_radius_99999_evaporation_time_100.yaml  BASE_AAVFIX_end_time_600_noise_1_wifi_range_99999_message_loss_probability_0_frontier_search_radius_15_evaporation_time_100.yaml
implementation_and_examples/agent_implementation/distance_sensor/: hc_sr04.cpp  hc_sr04.h
implementation_and_examples/agent_implementation/utils/: Algorithms.cpp  Algorithms.h  Box.h  CustomComparator.h  PheromoneMatrix.cpp  PheromoneMatrix.h  Quadtree.h  coordinate.h
implementation_and_examples/controllers/pipuck_hugo/: CMakeLists.txt  pipuck_hugo.cpp  pipuck_hugo.h
implementation_and_examples/controllers/pipuck_hugo_lua/: CMakeLists.txt  pipuck_hugo.lua
implementation_and_examples/libraries/cereal/: CMakeLists.txt
implementation_and_examples/loop_functions/radios_loop_functions/: CMakeLists.txt  radios_loop_functions.cpp
(+445 files in other folders)
